Check for memkind_get_version symbol.

--- a/configure.ac
+++ b/configure.ac
@@ -27,8 +27,7 @@ AC_DEFINE_UNQUOTED([TOPDIR], [$topdir], [The top source directory.])
 #
 AQ_WITH_PACKAGE([memkind], [],
                 [memkind.h], [],
-                [], [-lmemkind])
-                #memkind_get_version
+                [memkind_get_version], [-lmemkind])
                 
 mkdir -p bin
 
