--- a/config.h.in
+++ b/config.h.in
@@ -5,6 +5,9 @@
 #define _BLISPP_CONFIG_H_
 
 
+/* Define if blis is to be used. */
+#undef HAVE_BLIS
+
 /* define if the compiler supports basic C++11 syntax */
 #undef HAVE_CXX11
 
@@ -38,6 +41,9 @@
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
+/* Name of package */
+#undef PACKAGE
+
 /* Define to the address where bug reports for this package should be sent. */
 #undef PACKAGE_BUGREPORT
 
@@ -61,6 +67,9 @@
 
 /* The top source directory. */
 #undef TOPDIR
+
+/* Version number of package */
+#undef VERSION
 
 /* Define to the equivalent of the C99 'restrict' keyword, or to
    nothing if this is not supported.  Do not define if restrict is
